# okr_backend

./: .gitignore  notes.md  readme.md  results.txt  test_business_requirements.sh  test_business_requirements_devdata.sh  test_business_requirements_testdata.sh  test_data_expected.json  test_time.sh  test_time_curl.sh  testdata_expected.json  timings.sh  timings_expected.json  write_ppm.sh
create_dummy_db/: Cargo.toml
create_dummy_db/src/: main.rs  main2.rs
graal_reference_impl/: build.gradle.kts  settings.gradle.kts
image_prcocessing/: benchmarks.md  download_and_save_png.sh  test_time.sh  test_time_curl.sh  timings.sh
image_prcocessing/graal_reference_impl/: bla.sh  curl-format.txt
image_prcocessing/impls/ts/: process.js
image_prcocessing/postgres/: docker-compose.yml
image_prcocessing/postgres/Docker/: init.sql  init_wiki.sql
image_prcocessing/reference_impl/: settings.gradle.kts
image_prcocessing/rust/commonbefe/: Cargo.toml
image_prcocessing/rust/image_resize/: Cargo.toml
image_prcocessing/rust/parser_generator/: Cargo.toml
image_prcocessing/rust/parser_generator/src/: lib.rs  main.rs  unboxed.rs
image_prcocessing/rust/parser_generator/tests/: attribute_parser.rs  identifier.rs  predicate_combinator.rs  zero_or_more.rs
image_prcocessing/rust/warp_backend/: Cargo.toml
image_prcocessing/rust/wiki/: Cargo.toml
impls/: results.txt
impls/cpp/: CMakeLists.txt
impls/cpp/src/: DatabaseComponent.hpp  ErrorHandler.cpp  ServiceComponent.hpp
impls/gsc_cpp/: CMakeLists.txt  docker-compose.yaml
impls/gsc_cpp/resources/: config.json
impls/gsc_cpp/src/: App.cpp  DatabaseComponent.hpp  SwaggerComponent.hpp
impls/gsc_cpp2/: CMakeLists.txt  README.md  main.cpp  main.h
impls/gsc_cpp2/src/: App.cpp
impls/gsc_cpp2/src/controller/: ArticleController.cpp  ArticleController.hpp  SysinfoController.cpp  SysinfoController.hpp
impls/gsc_cpp2/src/dto/: Article.hpp  ArticleDTO.hpp  ImportRequestDTO.hpp  ImportResultDto.hpp  SysinfoDTO.hpp
impls/gsc_cpp2/src/service/: ArticleService.cpp  ArticleService.hpp
impls/gsc_cpp2/test/: MyControllerTest.cpp
impls/gsc_graalvm_java/: Dockerfile  Dockerfile.graal  Dockerfile.graal2  build.gradle.kts  compose.graal.yaml  compose.graal2.yaml  compose.yaml  settings.gradle.kts
impls/gsc_graalvm_kotlin/: Dockerfile  Dockerfile.graal  build.gradle.kts  compose.graal.yaml  compose.yaml  settings.gradle.kts
impls/gsc_node_koa/: .env  Dockerfile  compose.yaml  package-lock.json  package.json
impls/gsc_node_koa/src/: articleservice.ts  index.ts
impls/gsc_rust_axum/: Cargo.toml  readme.md
impls/gsc_rust_axum/src/: main.rs  models.rs  stuff.rs  v1.rs  v2.rs  v3.rs
impls/gsc_rust_warp/: .env  Cargo.toml  Dockerfile  compose.yaml
impls/gsc_rust_warp/src/: articleservice.rs  db.rs  main.rs  models.rs  server.rs
impls/gsc_rust_warp2/: .env  Cargo.toml  Dockerfile  compose.yaml
impls/gsc_rust_warp2/src/: main.rs
impls/ts/: .env  package.json  tsconfig.json
impls/ts/src/: art2imgservice.ts  articleservice.ts  image-utils-v2.ts  index.ts  resolutionservice.ts
impls/tsc_node_koa/: package-lock.json  package.json  service.js
impls/tsc_node_koa/src/: art2imgservice_v1.ts  articleservice.ts  articleservice_v1.ts  image-utils-v1.ts  index.ts  resolutionservice.ts
postgres/: docker-compose.yml
postgres/Docker/: db.Dockerfile  init.sql  shop
reference_impl/: Dockerfile  bla.sh  build.gradle.kts  compose.yaml  readme.md  test_time.sh
rust/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: db_art2img.rs  db_articles.rs  db_image.rs  db_resolution.rs  db_wikipage.rs  lib.rs  models.rs  utils.rs
rust/commonbefe/: Cargo.toml
rust/commonbefe/src/: models.rs
rust/create_data/: Cargo.toml
rust/create_data/src/: main.rs
rust/create_dummy_db/: Cargo.toml
rust/create_dummy_db/src/: main.rs  pngimages.rs
rust/frontend/: Cargo.toml  index.html
rust/frontend/src/: main.rs
rust/frontend_router/: Cargo.toml  index.html  readme.md
rust/frontend_router/src/: main.rs
rust/image_resize/: Cargo.toml  readme.md
rust/image_resize/src/: main.rs
rust/parser_generator/benches/: my_benchmark.rs
rust/parser_generator/src/: boxed.rs  unboxed.rs
rust/parser_generator/tests/: json_1.rs  literal.rs  one_or_more.rs  pair.rs  quoted_string_parser.rs  single_element_parser.rs  xml.rs
rust/read_from_db/: Cargo.toml
rust/read_from_db/src/: main.rs
rust/warp_backend/: Cargo.toml
rust/warp_backend/src/: main.rs  multi.rs  multi_base64.rs  multi_json_array.rs  rayon.rs  single.rs  single_base64.rs  single_json.rs  utils.rs
rust/warp_multi_threaded/: Cargo.toml
rust/warp_multi_threaded/src/: main.rs
rust/warp_single_threaded/: Cargo.toml
rust/warp_single_threaded/src/: main.rs
rust/warp_with_rayon/: Cargo.toml
rust/warp_with_rayon/src/: main.rs
rust/wiki/: Cargo.toml
rust/wiki/src/: main.rs
testdata/: articles_000001.txt  articles_000002.txt  articles_000003.txt
vi-okr/: .gitignore  build_containers.sh  run_tests.sh
vi-okr/gsc_graalvm_java/: Dockerfile  Dockerfile.graal  compose.yaml
vi-okr/gsc_graalvm_kotlin/: Dockerfile  Dockerfile.graal  build.gradle.kts  compose.yaml  settings.gradle.kts
vi-okr/gsc_node_koa/: .env
vi-okr/gsc_ref_impl_java21/: Dockerfile  compose.yaml
vi-okr/gsc_rust_axum/: .env  Cargo.toml  Dockerfile  compose.yaml
vi-okr/gsc_rust_axum/src/: main.rs  v1.rs  v2.rs  v3.rs
vi-okr/impls/: Dockerfile.script
vi-okr/impls/bep/: Dockerfile  compose-testdata.yaml  compose.yaml  timings_bep_ref_impl_java21.sh
vi-okr/impls/bep-rust/: Cargo.toml  Dockerfile  compose-testdata.yaml  compose.yaml  timings_bep_rust.sh
vi-okr/impls/bep-rust/src/: main.rs  parser.rs
vi-okr/impls/gsc_graalvm_java/: Dockerfile.graal  build.gradle.kts  compose.graal.yaml  compose.yaml  settings.gradle.kts  timings_gsc_graalvm_java_graal.sh  timings_gsc_graalvm_java_jdk.sh
vi-okr/impls/gsc_graalvm_kotlin/: Dockerfile.graal  (+4 more)
vi-okr/tests/: devdata_actual.json  test_business_requirements_devdata_gsc_ref_impl_java21.sh  test_business_requirements_testdata_jha_ref_impl_dotnet.sh
(+206 files in other folders)
