[package]
name = "okr_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.1"
magick_rust = "0.19.0"
rand = "*"
tokio-postgres = "0.7.10"
tokio = { version = "1.18.2", features = ["full"] }
deadpool-postgres = "0.9.0" 
