[package]
name = "gsc-rust-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0" }
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
