[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.14.0"
magick_rust = "0.19.1"
rand = "0.8.5"
tokio-postgres = "0.7.10"
tokio = { version = "1.35.0", features = ["full"] }
deadpool-postgres = "0.12.1"
pretty_env_logger = "0.5.0"
log = "0.4.20"
serde = "1.0.194"
base64 = "0.21.5"
warp = "0.3.6"
serde_json = "1.0.111"
