[package]
name = "okrfrontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "=0.9.0-beta.1", features = ["suspense"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.17"
reqwasm = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
wasm-bindgen = "0.2.89"
js-sys = "0.3.63"
serde-wasm-bindgen = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.96", features = [] }
commonbefe = { path = "../commonbefe" }


[dependencies.web-sys]
version = "0.3.22"
features = [
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    'Document',
    'Element',
    'HtmlParagraphElement'
]

