[package]
name = "warp_single_threaded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio-postgres = "0.7.10"
tokio = { version = "1.35.0", features = ["full"] }
deadpool-postgres = "0.12.1"
pretty_env_logger = "0.5.0"
log = "0.4.20"
serde = "1.0.193"
base64 = "0.21.5"
common = { path = "../common" }
commonbefe = { path = "../commonbefe" }
serde_json = "1.0.108"
# serde_urlencoded = "0.7.1"
serde_derive = "1.0.193"
image = "0.24.7"
bytes = "1.5.0"
chrono = "0.4.31"
rayon = "1.8.0"
num_cpus = "1.16.0"
crossbeam-channel = "0.5.9"
crossbeam = "0.8.2"