[package]
name = "gsc-rust-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = { version = "1.0.115" }
serde_derive = "1.0.197"
chrono = { version = "0.4.37", features = ["serde"] }
