[package]
name = "parser_generator"
version = "0.1.0"
authors = ["bumzack <bumzacktrara@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "my_benchmark"
harness = false
