[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ammonia = "3.3.0"
pulldown-cmark = "0.9.3"
common = { path = "../common" }
tokio-postgres = "0.7.10"
tokio = { version = "1.35.1", features = ["full"] }